<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/icono_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_mi_cuenta"
            android:icon="@drawable/icono_user"
            android:title="@string/menu_mi_cuenta" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/icono_calendario"
            android:title="@string/menu_listado_de_eventos" />

        <item
            android:id="@+id/nav_denuncias"
            android:icon="@drawable/ic_denuncias"
            android:title="Listado de Denuncias" />

        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/ic_reportes"
            android:title="Ver Reportes" />

        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/icono_logout"
            android:title="@string/menu_cerrar_sesion" />

    </group>
</menu>