<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Barra de herramientas -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/barra_de_herramientas"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/tituloReportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="Generar Reportes" />

            <TextView
                android:id="@+id/fechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Seleccionar Fecha de Inicio" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_fechaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:text="Seleccionar"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/textView_fechaInicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:ems="10"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/btnEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar Fecha Final" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_fechaFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:text="Seleccionar"
                    android:textSize="20sp"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/textView_fechaFinal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="3dp"
                    android:ems="10"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- CheckBoxes -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selecciona opciones adicionales:"
                android:padding="8dp" />

            <RadioGroup
                android:id="@+id/rgTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/rbFinalizaciones"
                    android:layout_width="match_parent"
                    android:tag="1"
                    android:layout_height="wrap_content"
                    android:text="@string/reporte1" />

                <RadioButton
                    android:id="@+id/rbCalificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="2"
                    android:text="@string/reporte2" />

                <RadioButton
                    android:id="@+id/rbValoraciones"
                    android:layout_width="match_parent"
                    android:tag="3"
                    android:layout_height="wrap_content"
                    android:text="@string/reporte3" />
            </RadioGroup>

            <Button
                android:id="@+id/btnGenerar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Generar Reporte"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Menú de navegación -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

