<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estas en HomeFragment"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Botones de navegacion con fines demostrativos..."
                android:textAlignment="center"
                android:textSize="12dp"
                android:textStyle="italic"
                android:paddingBottom="16dp"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Navegación de Activities"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/AccesoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="ACCESO"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_AgregarAutoEvaluacionActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="AGREGAR AUTOEVALUA"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_AgregarModificarEventoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="AGREGAR EVENTO"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_ModificarEventoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="MODIFICAR EVENTO CON ID 1"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_AgregarPreguntaAutoEvalulacionActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="AGREGAR PREGUNTA"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_ListadoEventosActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="LISTADO EVENTOS"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_MainAdminActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btnwb"
                        android:text="@string/btn_MainAdminActivity"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_MainEstudianteActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btnwb"
                        android:text="@string/btn_MainEstudianteActivity"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_MainGestorActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btnwb"
                        android:text="@string/btn_MainGestorActivity"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_NotaFinalAutoEvaluacionActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="NOTA FINAL AUTO-EVA"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_RealizarAutoEvaluacionAlumnoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="ALUMNO AUTO-EVALUA"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_verCursoEspecificoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="VER CURSO ESPECIFICO" />

                    <Button
                        android:id="@+id/btn_Reportes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="REPORTES" />

                    <Button
                        android:id="@+id/btn_VerEventoActivity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="VER EVENTO"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Navegación de Fragments"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingBottom="8dp"
                        android:textColor="@android:color/black"
                        android:layout_gravity="center" />

                    <Button
                        android:id="@+id/btn_CrearCurso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="CREAR CURSO"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/btn_EstadoCurso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btnwb"
                        android:text="ESTADO CURSOS"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_EstadoGestor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/btnwb"
                        android:text="ESTADO GESTOR"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/ListarCursos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="LISTA CURSOS"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_ListarGestores"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="LISTA GESTORES"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_Login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="LOGIN"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_MiCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="MI CUENTA"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_Registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="REGISTRO 1"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/btn_Registro2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginHorizontal="20dp"
                        android:background="@drawable/btnwb"
                        android:text="REGISTRO 2"
                        android:textColor="@android:color/white" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
